@@ -25,6 +25,6 @@ EBUILD gitlab-ce-8.16.8.ebuild 11982 SHA256 31537d4a6aeb9ff14ab14c9a27dca51a056e
 EBUILD gitlab-ce-8.17.4.ebuild 12928 SHA256 f748d42058293ba4f593fbb36be34ecde332d896d04c610fd3b7e91288c18fbb SHA512 3c2736f9b7df066bb105faffef6ce2b6276fe60a686a7462c630a1b7c7c0296d94e33c7ea25a9f24aa814628f318e2430a3e5ca149783c86ef3fb1132dd01877 WHIRLPOOL cd629ba993df3eaef9c9ec1bf1649aa4cfea5f3787d2207a7016c092bff67175d79c6782d643d4c80b3b5971a98858feaa279a184abc4fd936c7e5c8b291dd28
 EBUILD gitlab-ce-9.0.0_rc4.ebuild 12910 SHA256 8851160b4454845fb33ce0b9a9dd3e070bed07d3a0e5c5f753c77b0ef301ded0 SHA512 9d109a3ea8fa7a7bb33440b4b21bf988745c4eefb62b834ad88825f3ffa28881eceaf402ec09241b74d91e778258c1a18daae6c86254625af4f54bf6189b32f2 WHIRLPOOL 67aa480b4cf1209a3d7af3bffb1f7f774bf2c6d18bf40960478e13459813ebb9472adc5aec3b84252157b0c3e74f9e7f74cb0d57395983c02ba4c976ffae106f
 EBUILD gitlab-ce-9.0.1-r1.ebuild 13083 SHA256 4340c7e3edf6b4aa69693c88f64310dd69c6079c2188dfc6ba891f26c29a5409 SHA512 be832c77b4d60f04e4f328563d30877cec03aea84aaa41daa989c67c0db7ac0a3b91ca2339b07c91785b618b2d3f636566b0625c52134ef06f02c21486e2abdb WHIRLPOOL 30488fba1af1a5892ae06a56a9aa3d7adfa8d7a5afe3dac9f333f98ea4b8557fdbe145cf60ab2d88e6b3fc6477e08c80e1cd554a0888a21a7d5a9d89e1970721
-EBUILD gitlab-ce-9999.ebuild 12942 SHA256 c2f236b304df08cf892eba8f379f2cad77eeb84127dbb07bf27d8a50d11c631c SHA512 91e357f130600307a337ec9d0b063b4cbed1162c9c62c5b61512322aa8d6b8cebf4439afa18989e84f8477851043c9173b6209d35d0068202b5c4e888aec47b0 WHIRLPOOL 0d143ec4c440be3ba7ddcbb3fc28b0d91d395307a48bb940ccf4acebae0b02bec72ca91dc8f5d1175a58bd43d128d4700ad875ed01230a20d0b924977f085783
-MISC ChangeLog 17334 SHA256 4c0e6cc5d8196eaeaa0eab6d34cdc26a4c07f47bf5ccf368e1b267b80c35b2a3 SHA512 f2155f2d7e52baa558071ef9764dc5674355080694f2cc96950945fe2a3eeddd0225b81a8800e355c5c5e3d29598e55b6ba0934fde8bb9d78007976b403d2bf9 WHIRLPOOL 75363420d2b34b47f287be0d068a9f420ddbd0f0def55a807c10354d2831bfef316f36fe27e958f71ade664a25d27f832bdb6e20f096a8d81f96e257cd3c7a8d
+EBUILD gitlab-ce-9999.ebuild 13025 SHA256 606c38870f5edcb11b2fc99e2b2a4bb045f677cd57c0985e09beabb4fa5591fe SHA512 f4a4c35bc4655908199a6ac9cc2b03c05353a2ca129c50c99fd7063ff5a4008766582ffa131e22cc068b430b01e86e90b0500a6e5721e54142a78f9fc0408e12 WHIRLPOOL db7ef4a9d86c046616c6b94c535851be341a1027765653e33ca3761ca0cc551f8179f1f2ced229b7af7908243ef7b3558c3fad6090458777df5581f9900eb5d5
+MISC ChangeLog 17518 SHA256 8fc06998bba426547bd4027cc2217e24abd0d1eebd122b3928deaf356fc70a5b SHA512 bcdcc0dac06137d96e086d76b88c135aec477d08f47092cfff4fb8d85d95a562506ceb4a385dd5d697e1e743620f1eac8854b5df975a5bc5727a195e28d274a8 WHIRLPOOL 29c7d7d419c67bd7a3ad0f5c2b54685f8fd7d3ccf78a0928ed0a347ffa3ed358028721b81fccc8b009c00ac5b3aa8a6101520caba41fe9b88b8852ae1cafc59d
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
